fixed page view

--- a/index.html
+++ b/index.html
@@ -534,20 +534,22 @@
 
 <p><a href="https://www.gnu.org/licenses/gpl-3.0" target="_blank"><img alt="License: GPL v3" src="https://img.shields.io/badge/license-GPLv3-blue" /></a>
 <a href="https://github.com/harith-alsafi/mcpp/releases" target="_blank"><img alt="Version" src="https://img.shields.io/badge/version-1.0-blue" /></a>
+<a href="https://github.com/harith-alsafi/mcpp" target="_blank"><img alt="Repo" src="https://img.shields.io/badge/%20%20%20%20-repo-blue?logo=github" /></a>
 <a href="https://travis-ci.org/github/harith-alsafi/mcpp/builds" target="_blank"><img alt="Build" src="https://travis-ci.org/harith-alsafi/mcpp.svg?branch=main" /></a>
 <a href="https://github.com/harith-alsafi/mcpp/issues" target="_blank"><img alt="Github Issues" src="https://img.shields.io/badge/issues-0%20open-yellow" /></a></p>
 <ul>
-<li>mcpp (Math for C Plus Plus) is <strong>cross platform</strong>,  <strong>templated math library</strong> that can be used without compiling (except for the plotting functions). </li>
+<li>mcpp (Math for C Plus Plus) is <strong>cross platform</strong>,  <strong>templated math library</strong> that can be used without compiling (except for the plotting functionality). </li>
+<li>It is targetted towards <strong>engineers</strong> and <strong>mathematicians</strong>.</li>
+<li>Used with a very simple and intuitive syntax inspired from Python libraries such as <a href="https://www.sympy.org/en/index.html">sympy</a>, <a href="https://numpy.org/">numpy</a>, <a href="https://www.scipy.org/">scipy</a> and <a href="https://matplotlib.org/">matplotlib</a>.</li>
 <li>By only including <code>mcpp.hpp</code> file you get all the functions with their implementations into your code apart from the plotting functionality</li>
 <li>To use the plotting functionality you need to <a href="usage/install/">compile</a> the library as the plotting functionality uses <a href="https://www.sfml-dev.org/index.php">SFML</a> and compiled as a shared library</li>
 <li>Unit testing is done using <a href="https://github.com/google/googletest">Google test</a></li>
-<li>The library is targeted towards engineers and mathematicians</li>
 <li>Main targeted math sectors  :<ul>
-<li>Linear algebra </li>
-<li>Normal Algebra </li>
+<li>Algebra </li>
 <li>Statistics </li>
 <li>Calculus </li>
 <li>Vectors </li>
+<li>Signal systems </li>
 </ul>
 </li>
 </ul>
